# pycon-finance-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  e2e_test.py  pyproject.toml  railway.toml  requirements.txt
docs/: spike-dooray-api.md
docs/superpowers/plans/: 2026-04-17-finance-automation.md  2026-04-19-spike-and-deploy.md
docs/superpowers/specs/: 2026-04-17-finance-automation-design.md
scripts/: spike_dooray.py  spike_pycon_project.py  spike_write_status.py
src/: config.py  main.py  notifier.py  state_engine.py  store.py
src/clients/: dooray.py  sheets.py
src/handlers/: base.py  step10_sync.py  step11_sheets.py  step2_review.py  step2_track_reviewing.py  step3_copy.py  step3_track_payment_waiting.py  step4_copy_to_pycon.py  step5_payment.py  step5_track_payment_in_progress.py  step6_sync_and_complete.py  step8_evidence.py  step8_update_sheets.py
tests/: conftest.py  test_config.py  test_dooray_client.py  test_handlers.py  test_integration.py  test_notifier.py  test_sheets_client.py  test_state_engine.py  test_store.py
