[project]
name = "pycon-finance-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth==2.29.0",
    "gspread==6.1.4",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "requests==2.31.0",
    "responses==0.25.3",
    "schedule==1.2.1",
]
